Update flags to go fmt

--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,7 @@ script:
         - go test -v ./...
         - go test -cover -race ./...
         - go vet ./...
-        - test -z "$(go fmt -s ./...)"
+        - test -z "$(go fmt ./...)"
         - golint ./...
 
 sudo: false
