--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,22 @@
 language: go
 
+go:
+  - 1.x
+  - 1.12.x
+
+env:
+  - GO111MODULE=on
+
+install:
+  - go get golang.org/x/lint/golint
+  - go get golang.org/x/tools/cmd/cover
+  - go get github.com/mattn/goveralls
+
 script:
-  - go test -v ./...
-  - go test -cover -race ./...
-  - go vet ./...
+  - go test -covermode=count -coverprofile=coverage.out ./...
   - test -z "$(go fmt ./...)"
+  - go vet ./...
+  - golint ./...
+  - if [ "$TRAVIS_PULL_REQUEST" = "false" ]; then goveralls -coverprofile=coverage.out -service=travis-ci -repotoken $COVERALLS_TOKEN; fi
 
 sudo: false
