--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,39 +1,37 @@
 on:
   pull_request:
-    types:
-    - opened
-    - synchronize
-    - reopened
   push:
-name: continuous-integration
 jobs:
-  Ubuntu:
+  test:
     runs-on: ubuntu-latest
     steps:
-    - name: Setup Go
+    - name: Set up Go
       uses: actions/setup-go@v1
       with:
-        go-version: 1.x
+        go-version: 1.14.x
     - name: Checkout
       uses: actions/checkout@v1
     - name: Download Go modules
       run: go mod download
+    - name: Install tools
+      run: |
+        curl -sfL https://install.goreleaser.com/github.com/golangci/golangci-lint.sh | sh -s -- v1.24.0
+        cd $(mktemp -d)
+        go mod init tmp
+        go get github.com/mattn/goveralls
+        go get mvdan.cc/gofumpt/gofumports
     - name: Build
       run: go build ./...
     - name: Test
       run: go test -covermode=atomic -coverprofile=profile.cov -race ./...
     - name: Lint
-      run: |
-        curl -sfL https://install.goreleaser.com/github.com/golangci/golangci-lint.sh | sh -s -- v1.21.0
-        ./bin/golangci-lint run
+      run: ./bin/golangci-lint run
     - name: Check formatting
       run: |
-        GO111MODULE=off go get -u mvdan.cc/gofumpt/gofumports
         find . -name \*.go | xargs $(go env GOPATH)/bin/gofumports -w
         git diff --exit-code
     - name: Send coverage
       env:
         COVERALLS_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       run: |
-        GO111MODULE=off go get github.com/mattn/goveralls
         $(go env GOPATH)/bin/goveralls -coverprofile=profile.cov -service=github
