--- a/.golangci.yml
+++ b/.golangci.yml
@@ -1,14 +1,69 @@
 linters:
-  enable-all: true
+  enable:
+  - asciicheck
+  - bodyclose
+  - deadcode
+  - depguard
+  - dogsled
+  - dupl
+  - errcheck
+  - exhaustive
+  - exportloopref
+  - gocognit
+  - goconst
+  - gocritic
+  - gocyclo
+  - godot
+  - goerr113
+  - gofmt
+  - gofumpt
+  - goimports
+  - golint
+  - gomodguard
+  - goprintffuncname
+  - gosec
+  - gosimple
+  - govet
+  - ineffassign
+  - interfacer
+  - maligned
+  - misspell
+  - nakedret
+  - nestif
+  - noctx
+  - nolintlint
+  - prealloc
+  - rowserrcheck
+  - scopelint
+  - sqlclosecheck
+  - staticcheck
+  - structcheck
+  - stylecheck
+  - typecheck
+  - unconvert
+  - unparam
+  - unused
+  - varcheck
+  - whitespace
   disable:
-    - funlen
-    - gochecknoglobals
-    - godox
-    - gomnd
-    - lll
-    - wsl
+  - funlen
+  - gochecknoglobals
+  - godox
+  - gomnd
+  - lll
+  - testpackage
+  - wsl
+
+linters-settings:
+  goimports:
+    local-prefixes: github.com/twpayne/go-kml
+
 issues:
   exclude-rules:
   - linters:
+    - dupl
     - scopelint
-    path: "_test\\.go$"
+    path: "_test\\.go"
+  - linters:
+    - gosec
+    path: "internal/"
