--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,12 +26,8 @@ jobs:
     - name: Build
       run: go build ./...
     - name: Test
-      run: go test -covermode=atomic -coverprofile=profile.cov -race ./...
+      run: go test ./...
     - name: Lint
       uses: golangci/golangci-lint-action@v1
       with:
         version: v1.28
-    - name: Upload coverage
-      uses: shogo82148/actions-goveralls@v1
-      with:
-        path-to-profile: profile.cov
