--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,6 +27,10 @@ jobs:
       run: go build ./...
     - name: Test
       run: go test ./...
+    - name: Generate
+      run: |
+        go generate
+        git diff --exit-code
   lint:
     runs-on: ubuntu-latest
     steps:
