--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,37 +6,32 @@ on:
     - master
     tags:
     - v*
+env:
+  GO_VERSION: 1.x
+  GOLANGCI_LINT_VERSION: 1.50.1
 jobs:
   test:
     runs-on: ubuntu-latest
     steps:
-    - name: Set up Go
-      uses: actions/setup-go@v1
+    - uses: actions/checkout@93ea575cb5d8a053eaa0ac8fa3b40d7e05a33cc8
+    - uses: actions/setup-go@c4a742cab115ed795e34d4513e2cf7d472deb55f
       with:
-        go-version: 1.x
-    - name: Cache Go modules
-      uses: actions/cache@v2
-      with:
-        path: ~/go/pkg/mod
-        key: ${{ runner.os }}-go-${{ hashFiles('**/go.sum') }}
-        restore-keys: |
-          ${{ runner.os }}-go-
-    - name: Checkout
-      uses: actions/checkout@v2
-    - name: Build
-      run: go build ./...
-    - name: Test
-      run: go test ./...
-    - name: Generate
+        cache: true
+        go-version: ${{ env.GO_VERSION }}
+    - run: go build ./...
+    - run: go test ./...
+    - id: generate
       run: |
         go generate
         git diff --exit-code
   lint:
     runs-on: ubuntu-latest
     steps:
-    - name: Checkout
-      uses: actions/checkout@v2
-    - name: Lint
-      uses: golangci/golangci-lint-action@v2
+    - uses: actions/checkout@93ea575cb5d8a053eaa0ac8fa3b40d7e05a33cc8
+    - uses: actions/setup-go@c4a742cab115ed795e34d4513e2cf7d472deb55f
       with:
-        version: v1.42.1
+        cache: true
+        go-version: ${{ env.GO_VERSION }}
+    - uses: golangci/golangci-lint-action@07db5389c99593f11ad7b44463c2d4233066a9b1
+      with:
+        version: v${{ env.GOLANGCI_LINT_VERSION }}
