--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: Test
+name: main
 on:
   pull_request:
   push:
@@ -6,18 +6,14 @@ on:
     - master
     tags:
     - v*
-env:
-  GO_VERSION: 1.x
-  GOLANGCI_LINT_VERSION: 1.50.1
 jobs:
   test:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@93ea575cb5d8a053eaa0ac8fa3b40d7e05a33cc8
-    - uses: actions/setup-go@c4a742cab115ed795e34d4513e2cf7d472deb55f
+    - uses: actions/checkout@ac593985615ec2ede58e132d2e21d2b1cbd6127c
+    - uses: actions/setup-go@6edd4406fa81c3da01a34fa6f6343087c207a568
       with:
         cache: true
-        go-version: ${{ env.GO_VERSION }}
     - run: go build ./...
     - run: go test ./...
     - id: generate
@@ -27,11 +23,10 @@ jobs:
   lint:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@93ea575cb5d8a053eaa0ac8fa3b40d7e05a33cc8
-    - uses: actions/setup-go@c4a742cab115ed795e34d4513e2cf7d472deb55f
+    - uses: actions/checkout@ac593985615ec2ede58e132d2e21d2b1cbd6127c
+    - uses: actions/setup-go@6edd4406fa81c3da01a34fa6f6343087c207a568
       with:
         cache: true
-        go-version: ${{ env.GO_VERSION }}
-    - uses: golangci/golangci-lint-action@07db5389c99593f11ad7b44463c2d4233066a9b1
+    - uses: golangci/golangci-lint-action@08e2f20817b15149a52b5b3ebe7de50aff2ba8c5
       with:
-        version: v${{ env.GOLANGCI_LINT_VERSION }}
+        version: v1.51.2
