--- a/.golangci.yml
+++ b/.golangci.yml
@@ -7,30 +7,30 @@ linters:
   - containedctx
   - contextcheck
   - decorder
-  - depguard
   - dogsled
   - dupl
   - dupword
   - durationcheck
+  - err113
   - errcheck
   - errchkjson
   - errname
   - errorlint
-  - execinquery
   - exhaustive
   - exportloopref
+  - fatcontext
   - forbidigo
   - forcetypeassert
   - gci
   - ginkgolinter
   - gocheckcompilerdirectives
   - gochecknoinits
+  - gochecksumtype
   - gocognit
   - goconst
   - gocritic
   - gocyclo
   - godot
-  - goerr113
   - gofmt
   - gofumpt
   - goheader
@@ -40,14 +40,17 @@ linters:
   - goprintffuncname
   - gosec
   - gosimple
+  - gosmopolitan
   - govet
   - grouper
   - importas
+  - inamedparam
   - ineffassign
   - interfacebloat
   - ireturn
   - loggercheck
   - makezero
+  - mirror
   - misspell
   - musttag
   - nakedret
@@ -58,17 +61,23 @@ linters:
   - nolintlint
   - nonamedreturns
   - nosprintfhostport
+  - perfsprint
   - prealloc
   - predeclared
   - promlinter
+  - protogetter
   - reassign
   - revive
   - rowserrcheck
+  - sloglint
+  - spancheck
   - sqlclosecheck
   - staticcheck
   - stylecheck
+  - tagalign
   - tagliatelle
   - tenv
+  - testifylint
   - testpackage
   - thelper
   - tparallel
@@ -79,9 +88,11 @@ linters:
   - usestdlibvars
   - wastedassign
   - whitespace
+  - zerologlint
   disable:
+  - canonicalheader
   - cyclop
-  - exhaustivestruct
+  - depguard
   - exhaustruct
   - funlen
   - gochecknoglobals
@@ -91,7 +102,6 @@ linters:
   - maintidx
   - nlreturn
   - paralleltest
-  - structcheck # https://github.com/golangci/golangci-lint/issues/2649
   - testableexamples
   - varnamelen
   - wrapcheck
@@ -130,5 +140,5 @@ issues:
     - gosec
     path: "internal/"
   - linters:
-    - goerr113
+    - err113
     text: do not define dynamic errors, use wrapped static errors instead
