--- a/.golangci.yml
+++ b/.golangci.yml
@@ -47,6 +47,7 @@ linters:
   - gosmopolitan
   - govet
   - grouper
+  - iface
   - importas
   - inamedparam
   - ineffassign
@@ -72,6 +73,7 @@ linters:
   - promlinter
   - protogetter
   - reassign
+  - recvcheck
   - revive
   - rowserrcheck
   - sloglint
@@ -102,7 +104,6 @@ linters:
   - funlen
   - gochecknoglobals
   - godox
-  - gomnd
   - lll
   - maintidx
   - nlreturn
